<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/lqg" />

        <TextView
            android:id="@+id/quiz_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/image"
            android:layout_toRightOf="@+id/image"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/info"
            android:textColor="#fafafa"
            android:textSize="@dimen/ts_20"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/quiz_game"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/Q1"
                android:textSize="@dimen/ts_18"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/q1EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/editText"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/Q2"
                android:textSize="@dimen/ts_18"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/q2r1_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/a1q2"
                    android:textColor="#ff5252"
                    android:textSize="@dimen/ts_16" />

                <CheckBox
                    android:id="@+id/q2r2_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/a2q2"
                    android:textColor="#1976D2"
                    android:textSize="@dimen/ts_16" />

                <CheckBox
                    android:id="@+id/q2r3_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/a3q2"
                    android:textColor="#ffeb3b"
                    android:textSize="@dimen/ts_16" />

                <CheckBox
                    android:id="@+id/q2r4_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/a4q2"
                    android:textColor="#4caf50"
                    android:textSize="@dimen/ts_16" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/Q3"
                android:textSize="@dimen/ts_18"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q3r1_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:text="@string/a1q3"
                        android:textSize="@dimen/ts_16" />

                    <CheckBox
                        android:id="@+id/q3r2_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:text="@string/a2q3"
                        android:textSize="@dimen/ts_16" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q3r3_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:text="@string/a3q3"
                        android:textSize="@dimen/ts_16" />

                    <CheckBox
                        android:id="@+id/q3r4_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:text="@string/a4q3"
                        android:textSize="@dimen/ts_16" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/Q4"
                android:textSize="@dimen/ts_18"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_q4a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a1q4" />

                <RadioButton
                    android:id="@+id/radio_q4a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a2q4" />

                <RadioButton
                    android:id="@+id/radio_q4a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a3q4" />

                <RadioButton
                    android:id="@+id/radio_q4a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a4q4" />
            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/Q5"
                android:textSize="@dimen/ts_18"
                android:textStyle="bold" />


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/radio_q5a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a1q5" />

                <RadioButton
                    android:id="@+id/radio_q5a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a2q5" />

                <RadioButton
                    android:id="@+id/radio_q5a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a3q5" />

                <RadioButton
                    android:id="@+id/radio_q5a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a4q5" />

                <RadioButton
                    android:id="@+id/radio_q5a5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a5q5" />

                <RadioButton
                    android:id="@+id/radio_q5a6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a6q5" />

                <RadioButton
                    android:id="@+id/radio_q5a7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a7q5" />
            </RadioGroup>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:onClick="submitScore"
                android:text="@string/submit_button" />

            <Button
                android:id="@+id/exit_button_id"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/ic_launcher_background"
                android:onClick="exitApp"
                android:text="@string/exit_button" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>